# UpdateManager

./: .gitignore  AppInformation.json  BuildProject.bat  BuildProject.sh  CMakeLists.txt  CMakeSettings.json  DatabaseConnect.cpp  InstallLibraries.sh  README.md  README_ru.md  UpdateManager.code-workspace  UpdateManager.cpp  resource.rc
.github/workflows/: CI_dev.yml  CI_master.yml  UpdateManager_CI.yml
Logo/: InstallerDeepForge_Toolset.psd  UpdateManager.psd
include/: UpdateManager_Windows.hpp
src/: AppInformation.json  DatabaseConnect.cpp  DatabaseConnect.hpp  Logger.cpp  Logger.hpp  UpdateManager.cpp  resource.res
src/Logo/: DeepForgeToolset.psd
src/include/: Client.cpp  Client_POSIX.hpp  Client_UNIX.hpp  Logger.cpp  Logger.hpp  UpdateManager_Linux.hpp  UpdateManager_Windows.hpp  UpdateManager_macOS.hpp
src/include/sqlite/: sqlite3.h
src/include/sqlite3/: sqlite3.h
